[gd_scene load_steps=3 format=3 uid="uid://cvby0sxshc5rb"]

[ext_resource type="Script" uid="uid://bhds7au7oyefp" path="res://options_menu.gd" id="1_lbr8e"]
[ext_resource type="Texture2D" uid="uid://be7sc3117o5nd" path="res://Optionsscreen.png" id="2_t1lix"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbr8e")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 29.0
offset_top = 49.0
offset_right = 5368.0
offset_bottom = 2751.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_t1lix")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 475.0
offset_top = 200.0
offset_right = 675.0
offset_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Volume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Brightness" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Brightness"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="DevLevel" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DevLevel"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 414.0
offset_right = 773.0
offset_bottom = 464.0
text = "Volume and Brightness do nothing in current build"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Brightness" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DevLevel" to="." method="_on_dev_level_pressed"]
